@@ -1,3 +1,8 @@
+2005-10-14  Stefan Seefeld  <stefan@codesourcery.com>
+
+	* qm/test/cmdline.py: Add 'annotate' option to 'run' command, refine
+	'describe' option.
+
 2005-09-14  Stefan Seefeld  <stefan@codesourcery.com>
 
 	* qm/test/cmdline.py: Add 'describe' and enhance 'ls' commands.
